src/components/status.css
/* ... */
.status:not(.large) .hashtag-stuffing:first-child {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  white-space: normal;
}

.media-figure-multiple {
  margin: 0;
  padding: 0;

  figcaption {
    padding: 4px;
    font-size: 90%;
    color: var(--text-insignificant-color);
    line-height: 1.2;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    & > * {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      display: inline-flex;
      gap: 4px;

      &:hover {
        color: var(--text-color);
        cursor: pointer;
      }

      &:only-child {
        white-space: pre-line;
        overflow: auto;
        text-overflow: unset;
      }
    }

    sup {
      opacity: 0.75;
      font-variant-numeric: tabular-nums;
      flex-shrink: 0;
    }
  }

  /* Only 4, for now. Would be better if this is a for loop */
  &:has(.media[data-has-alt]:nth-child(1):is(:hover, :focus))
    figcaption
    > div[data-caption-index~='1'],
  &:has(.media[data-has-alt]:nth-child(2):is(:hover, :focus))
    figcaption
    > div[data-caption-index~='2'],
  &:has(.media[data-has-alt]:nth-child(3):is(:hover, :focus))
    figcaption
    > div[data-caption-index~='3'],
  &:has(.media[data-has-alt]:nth-child(4):is(:hover, :focus))
    figcaption
    > div[data-caption-index~='4'] {
    color: var(--text-color);
  }
}

.carousel-item {
  position: relative;
}
.carousel-item button.media-alt {
  position: absolute;
  --bottom: 16px;
  bottom: var(--bottom);
  bottom: calc(var(--bottom) + env(safe-area-inset-bottom));
  left: 16px;
  left: calc(16px + env(safe-area-inset-left));
  text-align: left;
  border-radius: 8px;
  color: var(--text-color);
  padding: 4px 8px;
  background-color: var(--bg-faded-color);
  border: 1px solid var(--outline-color);
  box-shadow: 0 4px 16px var(--drop-shadow-color);
  max-width: min(var(--main-width), calc(100% - 32px));
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 90%;
  z-index: 1;
  text-shadow: 0 var(--hairline-width) var(--bg-color);
  mix-blend-mode: luminosity;
  white-space: pre-line;

  &:is(:hover, :focus) {
    mix-blend-mode: normal;
  }
}
.carousel-item button.media-alt .media-alt-desc {
  overflow: hidden;
  white-space: normal;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  line-height: 1.4;
}
.carousel-item button.media-alt[hidden] {
  opacity: 0;
}
@media (hover: hover) {
  .carousel-item button.media-alt {
    opacity: 0;
    transform: translateY(var(--bottom)) scale(0.95);
    transition: all 0.2s ease-in-out;
  }
  .carousel-item:hover button.media-alt {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
  .carousel-item button.media-alt[hidden] {
    opacity: 1;
  }
}

/* CARD */

.card {
  display: flex;
  margin-top: 8px;
  border-radius: 8px;
  border: 1px solid var(--outline-color);
  overflow: hidden;
  color: inherit;
  align-items: stretch;
  background-color: var(--bg-color);
  max-width: 480px;
  /* max-height: 160px; */
}
.status.large .card.large,
.status-carousel .content-container[data-content-text-weight='1'] .card.large {
  border-radius: 16px;
  flex-direction: column;
  max-height: none;
}
.card .card-image {
  flex-shrink: 0;
  width: 35%;
  position: relative;
  border-inline-end: 1px solid var(--outline-color);
}
.card .card-image img {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
}
/* .card .image {
  width: 35%;
  height: auto;
  flex-grow: 1;
  border-inline-end: 1px solid var(--outline-color);
  object-fit: cover;
  aspect-ratio: 1 / 1;
} */
.status.large .card .card-image {
  aspect-ratio: 1 / 1;
}
.status.large .card.large .card-image,
.status-carousel
  .content-container[data-content-text-weight='1']
  .card.large
  .card-image {
  flex-grow: 1;
  aspect-ratio: 1.91 / 1;
  width: 100%;
  max-height: 40vh;
  border-inline-end: 0;
  border-block-end: 1px solid var(--outline-color);
}
.card:is(:hover, :focus) img,
a:focus-visible .card img {
  animation: position-object 5s ease-in-out 1s 5;
  animation-duration: var(--anim-duration, 5s);
}
.card p {
  margin: 0;
}
.card .meta-container {
  padding: 8px;
  min-width: 0;
  flex-grow: 1;
  align-self: center;
}
.status.large .card.large .meta-container,
.status-carousel
  .content-container[data-content-text-weight='1']
  .card.large
  .meta-container {
  align-self: flex-start;
  flex-grow: 0;
}
.card .title {
  line-height: 1.25;
  font-weight: normal;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
}
.card .meta {
  font-size: smaller;
  opacity: 0.75;
  margin: 0;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
}
.card.no-image :is(.title, .meta) {
  -webkit-line-clamp: 3;
  line-clamp: 3;
}
.card .meta.domain {
  opacity: 1;
  color: var(--link-color);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
}
.card:visited .meta.domain {
  color: var(--link-visited-color);
}
.card .meta.domain * {
  vertical-align: middle;
}
a.card {
  text-decoration: none;
  transition: opacity 0.2s ease-in-out;
}
a.card:is(:hover, :focus) {
  border: 1px solid var(--link-color);
  box-shadow: 0 0 0 2px var(--link-faded-color);
}
a.card:is(:hover, :focus):visited {
  border-color: var(--link-visited-color);
}
.card.video {
  max-width: 320px;
  max-height: 320px;
}
.card.video iframe {
  width: 100%;
  height: 100%;
}
/* ... */

